",," ".." etc removed from pubs

--- a/_all-courses/ma210.md
+++ b/_all-courses/ma210.md
@@ -8,10 +8,10 @@ books:
 
   - author: Manin, Yu. I.
     title: A Course in Mathematical Logic for Mathematicians, Second Edition
-    publ: Graduate Texts in Mathematics,  Springer-Verlag, 2010.
+    publ: Graduate Texts in Mathematics,  Springer-Verlag, 2010
 
   - author: Srivastava, S. M.
-    title: A Course on Mathematical Logic, Universitext,  Springer-Verlag, 2008.
+    title: A Course on Mathematical Logic, Universitext,  Springer-Verlag, 2008
 prereqs:
   - No prior knowledge of logic is assumed.
   - Some background in algebra and topology will be assumed.
