--- a/_all-courses/ma215.md
+++ b/_all-courses/ma215.md
@@ -13,7 +13,7 @@ books:
   publ: Graduate Texts in Mathematics 17, AMS, 1997
 - author: Diamond, F. and Schurman, J.
   title: A First Course in Modular Forms
-  publ: Graduate Texts in Mathematics no. 228, Springer-Verlag, 2005.
+  publ: Graduate Texts in Mathematics no. 228, Springer-Verlag, 2005
 prereqs:
   - MA 224 (Complex Analysis) or equivalent
 ---
