--- a/_all-courses/ma217.md
+++ b/_all-courses/ma217.md
@@ -9,11 +9,11 @@ books:
     title: Elementary Number Theory
     publ: McGraw Hill, 1997
   - author: Clark, J. and Holton, D. A.
-    title: A first book at Graph Theory,
-    publ: World Scientific Cp., 1991.
+    title: A first book at Graph Theory
+    publ: World Scientific Cp., 1991
   - author: Polya G. D., Tarjan, R. E. and Woods, D. R.
     title: Notes on Introductory Combinations
-    publ: Springer-Verlag, 1990.
+    publ: Springer-Verlag, 1990
 ---
  
 __Combinatorics:__ Basic counting techniques. Principle of inclusion and exclusion.
