--- a/_all-courses/ma218.md
+++ b/_all-courses/ma218.md
@@ -4,16 +4,16 @@ title: Number Theory
 books:
   - author: Narasimham, R., Raghavan, S., Rangachari, S. S. and Sunder Lal.
     title: Algebraic Number Theory
-    publ: Lecture Notes in Mathematics, TIFR, 1966.
+    publ: Lecture Notes in Mathematics, TIFR, 1966
   - author: Niven, I. and Zuckerman, H. S.
     title: An Introduction to the Theory of numbers
-    publ: Wiley Eastern Limited, 1989.
+    publ: Wiley Eastern Limited, 1989
   - author: Apostol, T. M.
     title: Introduction to Analytic Number Theory
-    publ: Springer International Student Edition, 1989.
+    publ: Springer International Student Edition, 1989
   - author: Ireland, K. and Rosen, M.
     title: Classical Introduction to Modern Number Theory
-    publ: Springer-Verlag (GTM), 1990.
+    publ: Springer-Verlag (GTM), 1990
 ---
 
 **Algebraic Number Theory:** Algebraic numbers and algebraic integers, Class groups, Groups of units, Quadratic fields, Quadratic reciprocity law, Class number formula.
