--- a/_all-courses/ma225.md
+++ b/_all-courses/ma225.md
@@ -4,10 +4,10 @@ title: Operator Theory
 books:
   - author: Conway, J. B.
     title: A course in Functional Analysis
-    publ: Springer-Verlag, 1990.
+    publ: Springer-Verlag, 1990
   - author: Rudin, W.
     title: Functional Analysis
-    publ: Tata Mcgraw-Hill, 1974.
+    publ: Tata Mcgraw-Hill, 1974
   - author: Berberian, S. K.
     title: Lectures in Functional Analysis
     publ: Frederic Ungar, 1955
