--- a/_all-courses/ma251.md
+++ b/_all-courses/ma251.md
@@ -4,7 +4,7 @@ title: Numerical Methods
 books:
   - author: Gupta, A. and Bose, S. C.
     title: Introduction to Numerical analysis
-    publ: Academic Publishers, 1989.
+    publ: Academic Publishers, 1989
   - author: Conte, S. D. and Carl de Boor.
     title: Elementary Numerical Analysis
     publ: McGraw-Hill, 1980
