--- a/_all-courses/ma254.md
+++ b/_all-courses/ma254.md
@@ -13,7 +13,7 @@ books:
     publ: Springer- Verlag, 1993
   - author: Iserlas, A.
     title: First course in the numerical analysis of differential equations
-    publ: Cambridge, 1996.
+    publ: Cambridge, 1996
 ---
 
 **Introduction:** Floating point representation of numbers and roundoff errors,
