--- a/_all-courses/ma301.md
+++ b/_all-courses/ma301.md
@@ -12,7 +12,7 @@ books:
     title: Functional Anaysis (2nd Ed.)
     publ: McGraw-Hill, 2006
   - author: Hewitt, E. and Stromberg, K.
-    title: Real and Abstract Analysis,
+    title: Real and Abstract Analysis
     publ: Springer International Student Edition, Springer-Verlag/Narosa Pub. House, New Delhi, 1978
 ---
  
