--- a/_all-courses/ma314.md
+++ b/_all-courses/ma314.md
@@ -7,15 +7,15 @@ books:
   publ: Springer-Verlag, 1994
 - author:  Smith, K., Kahanpaa, L., Kekalainen, P., Traves, W.
   title: An Invitation to Algebraic Geometry
-  publ: Springer-Verlag, 2000.
+  publ: Springer-Verlag, 2000
 - author:  Reid, M.
   title: Undergraduate Algebraic Geometry
-  publ: London Mathematical Society Student Texts 12, Cambridge University Press, 1988.
-- author:  Fulton, W.,
+  publ: London Mathematical Society Student Texts 12, Cambridge University Press, 1988
+- author:  Fulton, W.
   title: Algebraic Curves (http://math.lsa.umich.edu/CurveBook.pdf)
 - author:  Holme, A.
   title: A Royal Road to Algebraic Geometry
-  publ: Springer,2012.
+  publ: Springer,2012
 ---
 Affine algebraic sets, Hilbert basis theorem, Hilbert Nullstellensatz, function
 field, plane curves, Bezout's theorem, product, normality, morohisms, Noether
