--- a/_all-courses/ma320.md
+++ b/_all-courses/ma320.md
@@ -13,7 +13,7 @@ books:
     publ: AMS 1996
   - author: A. W. Knapp
     title: Representation theory of semismiple lie groups. An overview based on examples
-    publ: Princeton university press 2002.
+    publ: Princeton university press 2002
 ---
 
 Lie groups, Lie algebras, matrix groups , representations, Schur's orthogonality relations, Peter-Weyl theorem, structure of compact semisimple Lie groups, maximal tori, roots and rootspaces, classification of fundamental systems Weyl group, Highest weight theorem, Weyl integration formula, Weyl's character formula.
