--- a/_all-courses/ma333.md
+++ b/_all-courses/ma333.md
@@ -7,7 +7,7 @@ books:
     publ: Universitext. Springer-Verlag, Berlin, 2004
   - author: Peter Petersen
     title: Riemannian geometry
-    publ: Graduate Texts in Mathematics, 171. Springer-Verlag, New York, 1998.
+    publ: Graduate Texts in Mathematics, 171. Springer-Verlag, New York, 1998
 ---
 
 Riemannian metric, Levi-Civita connection, geodesics, exponential map, Hopf-Rinow theorem, curvature tensior, first and second variational formula, jacobi fields, Myers Bonnet theorem, Bishop-Gromov volume comparison theorem, Cartan-Hadamard theorem, Synge’s theorem, de Rham cohomology and the Bochner techniques.  Topological implications of positive or negative curvature.
