--- a/_all-courses/ma342.md
+++ b/_all-courses/ma342.md
@@ -10,13 +10,13 @@ books:
     publ: Wiley Eastern, 1988
   - author:  Pazy, A.
     title: Semigroups of Linear Operators and Applications to Partial Differential Equations
-    publ: Springer-Verlag, 1983.
+    publ: Springer-Verlag, 1983
   - author:  Prasad, P. and Ravindran, R.
     title: Partial Differential Equations
-    publ: Willey Eastern, 1985.
+    publ: Willey Eastern, 1985
   - author:  Treves, J. E.
     title: Basic Linear Partial Differential Equations
-    publ: Academic Press, 1975.
+    publ: Academic Press, 1975
 ---
 Introduction to distribution theory and Sobolev spaces, Fundamental solutions
 for Laplace, heat and wave operations.
