--- a/_all-courses/ma346.md
+++ b/_all-courses/ma346.md
@@ -7,7 +7,7 @@ books:
     publ: Cambridge Univ. Press, 1990
 
   - author: Gakhov, F. D.
-    title: Boundary Value Problems,
+    title: Boundary Value Problems
     publ: Addision Wesley, 1966
 
   - author: Muskhelishvilli, N. I.
