--- a/_all-courses/ma367.md
+++ b/_all-courses/ma367.md
@@ -7,7 +7,7 @@ books:
     publ: Springer,  1991
   - author: A. Kallenberg
     title: Foundation  of Modern  Prability  Theory
-    publ: Second Edition, Springer.
+    publ: Second Edition, Springer
 
 
 ---
