--- a/_all-courses/ma368.md
+++ b/_all-courses/ma368.md
@@ -7,7 +7,7 @@ books:
     publ: Academic Press, San Diego, USA. 2001
   - author: Feller, W.
     title: Introduction to Probability Theory and Applications, Vol. I & II, 22ndedition
-    publ: John Wiley and Sons, 1971.
+    publ: John Wiley and Sons, 1971
   - author: Shiryaev, A. N.
     title: Probability
     publ: Springer, New York, 1966
