--- a/_all-courses/ma392.md
+++ b/_all-courses/ma392.md
@@ -4,8 +4,8 @@ title: Random Graphs and interacting particle systems
 books:
  - author: Rick Durrett  
    title: Random Graph Dynamics
-   publ: Cambridge University Press, 2001.
- - author: Bollobas 
+   publ: Cambridge University Press, 2001
+ - author: Bollobas
    title: Random Graphs
    publ: Cambridge University Press, 2006
  - author: Janson, S., Luczak, T and Rucinski
@@ -14,4 +14,3 @@ books:
 ---
 Erdos - Renyi random graphs, graphs with power law degree distributions, Ising Potts and contact process,
 voter model, epidemic models.
-
