--- a/_all-courses/um101.md
+++ b/_all-courses/um101.md
@@ -6,7 +6,7 @@ books:
     title: Calculus, Volume I, 2nd edition
     publ: Wiley, India, 2007
   - author: Strang, G.
-    title: Linear Algebra and its Applications, 4th Edition,
+    title: Linear Algebra and its Applications, 4th Edition
     publ: Brooks/Cole, 2006
 ---
 
