--- a/_all-courses/um102.md
+++ b/_all-courses/um102.md
@@ -6,14 +6,14 @@ books:
     title: Calculus, Volume II, 2nd edition
     publ: Wiley, India, 2007
   - author: Strang, G.
-    title: Linear Algebra and its Applications, 4th Edition,
+    title: Linear Algebra and its Applications, 4th Edition
     publ: Brooks/Cole, 2006
   - author: Artin, M.
     title: Algebra
     publ: Prentice Hall of India
-  - author: Hirsch, M., Smale, S. and Devaney, R. L. 2004.
+  - author: Hirsch, M., Smale, S. and Devaney, R. L.
     title: Differential Equations, Dynamical Systems, and an Introduction to Chaos, 2nd edition
-    publ: Academic Press, 1994
+    publ: Academic Press, 2004
 ---
 
 Linear Algebra continued: Inner products and Orthogonality; Determinants; Eigenvalues and Eigenvectors;
