--- a/_all-courses/ma328.md
+++ b/_all-courses/ma328.md
@@ -10,7 +10,7 @@ books:
     publ: Wadsworth &  Brooks/Cole, 1992
   - author: Raghavan  Narasimhan
     title: Several  Complex Variables
-    publ: Chicago Lectures in Mathematics Series,  The University of Chicago Press, 1971.
+    publ: Chicago Lectures in Mathematics Series,  The University of Chicago Press, 1971
 ---
 
 **Preliminaries:**   Holomorphic  functions in $C^n$ : definition , the generalized Cauchy integral formula, holomorphic  functions: power series development(s),  circular  and Reinhardt  domains,  analytic  continuation : basic  theory and comparisons  with  the  one- variable theory.
