--- a/_all-courses/ma373.md
+++ b/_all-courses/ma373.md
@@ -10,7 +10,7 @@ books:
     publ: Springer Verlag, 1971
   - author: J. L. Lions
     title: Controlabilite exacte, perturbations et stabilisation de systems distribues, Tome 1 and 2
-    publ: Research in applied mathematics, Vol. 8 and 9, Masson, Paris, 1988.
+    publ: Research in applied mathematics, Vol. 8 and 9, Masson, Paris, 1988
   - author: V. Barbu
     title: Mathematical methods in optimization of differential systems
     publ: Mathematics and its applications, Vol. 310 Kluwer academic Publishers, 1994
