--- a/_all-courses/ma339.md
+++ b/_all-courses/ma339.md
@@ -21,6 +21,10 @@ books:
     title: Elliptic partial differential equations of the second order
   - author: G. Szekelyhidi
     title: Extremal Kahler metrics
+prereqs:
+  - A first course on manifolds (MA 338 should do). 
+  - Analysis (multivariable calculus, some measure theory, function spaces).
+  - Functional analysis (The Hahn-Banach theorem, Riesz representation theorem, Open mapping theorem. Ideally, the spectral theory of compact self-adjoint operators too, but we will recall the statement if not the proof)
 ---
 
 Basics of Riemannian geometry (Metrics, Levi-Civita connection,
