--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,211 @@
+
+@article {MR3702695,
+    AUTHOR = {Sain, Debmalya},
+     TITLE = {On the norm attainment set of a bounded linear operator},
+   JOURNAL = {J. Math. Anal. Appl.},
+  FJOURNAL = {Journal of Mathematical Analysis and Applications},
+    VOLUME = {457},
+      YEAR = {2018},
+    NUMBER = {1},
+     PAGES = {67--76},
+      ISSN = {0022-247X},
+   MRCLASS = {46B20 (47A05)},
+  MRNUMBER = {3702695},
+       URL = {https://doi.org/10.1016/j.jmaa.2017.07.070},
+}
+
+@article {MR3709307,
+    AUTHOR = {Senthil Raani, K. S.},
+     TITLE = {{$L^p$}-{F}ourier asymptotics, {H}ardy-type inequality and
+              fractal measures},
+   JOURNAL = {Monatsh. Math.},
+  FJOURNAL = {Monatshefte f\"ur Mathematik},
+    VOLUME = {184},
+      YEAR = {2017},
+    NUMBER = {3},
+     PAGES = {459--487},
+      ISSN = {0026-9255},
+   MRCLASS = {42B10 (28A78 40E05)},
+  MRNUMBER = {3709307},
+       URL = {https://doi.org/10.1007/s00605-017-1081-7},
+}
+
+@article {MR3701044,
+    AUTHOR = {Gupta, Rajeev},
+     TITLE = {An improvement on the bound for {$C_2(n)$}},
+   JOURNAL = {Acta Sci. Math. (Szeged)},
+  FJOURNAL = {Acta Universitatis Szegediensis. Acta Scientiarum
+              Mathematicarum},
+    VOLUME = {83},
+      YEAR = {2017},
+    NUMBER = {1-2},
+     PAGES = {263--269},
+      ISSN = {0001-6969},
+   MRCLASS = {47A13},
+  MRNUMBER = {3701044},
+       URL = {https://doi.org/10.14232/actasm-015-088-4},
+}
+
+@article {MR3695870,
+    AUTHOR = {Dhillon, Gurbir and Khare, Apoorva},
+     TITLE = {Faces of highest weight modules and the universal {W}eyl
+              polyhedron},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {319},
+      YEAR = {2017},
+     PAGES = {111--152},
+      ISSN = {0001-8708},
+   MRCLASS = {17B10 (17B37 17B67 20G42 22E47 52B20)},
+  MRNUMBER = {3695870},
+       URL = {https://doi.org/10.1016/j.aim.2017.08.005},
+}
+
+@article {MR3692324,
+    AUTHOR = {Jiang, Chunlan and Ji, Kui and Misra, Gadadhar},
+     TITLE = {Classification of quasi-homogeneous holomorphic curves and
+              operators in the {C}owen-{D}ouglas class},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {273},
+      YEAR = {2017},
+    NUMBER = {9},
+     PAGES = {2870--2915},
+      ISSN = {0022-1236},
+   MRCLASS = {47C15 (47B37 47B48 47L40)},
+  MRNUMBER = {3692324},
+       URL = {https://doi.org/10.1016/j.jfa.2017.06.015},
+}
+
+@article {MR3683101,
+    AUTHOR = {Boggarapu, Pradeep and Roncal, Luz and Thangavelu, Sundaram},
+     TITLE = {Mixed norm estimates for the {C}es\`aro means associated with
+              {D}unkl-{H}ermite expansions},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {369},
+      YEAR = {2017},
+    NUMBER = {10},
+     PAGES = {7021--7047},
+      ISSN = {0002-9947},
+   MRCLASS = {42C10 (33C45 35J10 42B08 42B35 43A90)},
+  MRNUMBER = {3683101},
+       URL = {https://doi.org/10.1090/tran/6861},
+}
+
+@article {MR3683032,
+    AUTHOR = {Datta, Basudeb and Maity, Dipendu},
+     TITLE = {Semi-equivelar and vertex-transitive maps on the torus},
+   JOURNAL = {Beitr. Algebra Geom.},
+  FJOURNAL = {Beitr\"age zur Algebra und Geometrie. Contributions to Algebra
+              and Geometry},
+    VOLUME = {58},
+      YEAR = {2017},
+    NUMBER = {3},
+     PAGES = {617--634},
+      ISSN = {0138-4821},
+   MRCLASS = {57M60 (52B70 52C20)},
+  MRNUMBER = {3683032},
+       URL = {https://doi.org/10.1007/s13366-017-0332-z},
+}
+
+@article {MR3683021,
+    AUTHOR = {Kreuzer, Martin and Patil, Dilip P.},
+     TITLE = {Computational aspects of {B}urnside rings, part {I}: the ring
+              structure},
+   JOURNAL = {Beitr. Algebra Geom.},
+  FJOURNAL = {Beitr\"age zur Algebra und Geometrie. Contributions to Algebra
+              and Geometry},
+    VOLUME = {58},
+      YEAR = {2017},
+    NUMBER = {3},
+     PAGES = {427--452},
+      ISSN = {0138-4821},
+   MRCLASS = {19A22 (20C40)},
+  MRNUMBER = {3683021},
+       URL = {https://doi.org/10.1007/s13366-016-0324-4},
+}
+
+@article {MR3679123,
+    AUTHOR = {Manchanda, Kaustubh and Bose, Amitabha and Ramaswamy,
+              Ramakrishna},
+     TITLE = {Collective dynamics in heterogeneous networks of neuronal
+              cellular automata},
+   JOURNAL = {Phys. A},
+  FJOURNAL = {Physica A. Statistical Mechanics and its Applications},
+    VOLUME = {487},
+      YEAR = {2017},
+     PAGES = {111--124},
+      ISSN = {0378-4371},
+   MRCLASS = {92B20 (37B15)},
+  MRNUMBER = {3679123},
+       URL = {https://doi.org/10.1016/j.physa.2017.06.021},
+}
+
+@article {MR3670809,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Closure operators in abelian categories and spectral spaces},
+   JOURNAL = {Theory Appl. Categ.},
+  FJOURNAL = {Theory and Applications of Categories},
+    VOLUME = {32},
+      YEAR = {2017},
+     PAGES = {Paper No. 20, 719--735},
+      ISSN = {1201-561X},
+   MRCLASS = {54B30 (13B22 14A05 18E15)},
+  MRNUMBER = {3670809},
+}
+
+@article {MR3669813,
+    AUTHOR = {Mandal, S. and Sahoo, T. and Chakrabarti, A.},
+     TITLE = {Characteristics of eigen-system for flexural gravity wave
+              problems},
+   JOURNAL = {Geophys. Astrophys. Fluid Dyn.},
+  FJOURNAL = {Geophysical and Astrophysical Fluid Dynamics},
+    VOLUME = {111},
+      YEAR = {2017},
+    NUMBER = {4},
+     PAGES = {249--281},
+      ISSN = {0309-1929},
+   MRCLASS = {76B15 (74F10)},
+  MRNUMBER = {3669813},
+       URL = {https://doi.org/10.1080/03091929.2017.1318129},
+}
+
+@article {MR3669002,
+    AUTHOR = {Basak, Biplab and Casali, Maria Rita},
+     TITLE = {Lower bounds for regular genus and gem-complexity of {PL}
+              4-manifolds},
+   JOURNAL = {Forum Math.},
+  FJOURNAL = {Forum Mathematicum},
+    VOLUME = {29},
+      YEAR = {2017},
+    NUMBER = {4},
+     PAGES = {761--773},
+      ISSN = {0933-7741},
+   MRCLASS = {57Q15 (05C10 57N13 57Q05)},
+  MRNUMBER = {3669002},
+       URL = {https://doi.org/10.1515/forum-2015-0080},
+}
+
+@article {MR3667896,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Noetherian schemes over abelian symmetric monoidal categories},
+   JOURNAL = {Internat. J. Math.},
+  FJOURNAL = {International Journal of Mathematics},
+    VOLUME = {28},
+      YEAR = {2017},
+    NUMBER = {7},
+     PAGES = {1750051, 34},
+      ISSN = {0129-167X},
+   MRCLASS = {14A15 (18D10 19D23)},
+  MRNUMBER = {3667896},
+       URL = {https://doi.org/10.1142/S0129167X17500513},
+}
+
+
+
+
+
 @incollection {MR3308326,
     AUTHOR = {Ayyer, Arvind and Klee, Steven and Schilling, Anne},
      TITLE = {Markov chains for promotion operators},
