--- a/_seminars/2017/2017-12-18-Aiyappan.md
+++ b/_seminars/2017/2017-12-18-Aiyappan.md
@@ -1,5 +1,5 @@
 ---
-speaker: AIYAPPAN S (IISc, Bangalore)
+speaker: Aiyappan S (IISc, Bangalore)
 title: "Unfolding Operators in Various Oscillatory Domains: Homogenization of Optimal Control Problems"
 date: 18 December, 2017
 time: 10.30 am
@@ -12,4 +12,3 @@ oscillating pillar type domain. Then, we will consider a time-dependent control 
 Next, we will present a generalized unfolding operator that we have developed for a general oscillatory domain. Using this unfolding operator, we study the homogenization of a non-linear elliptic problem on this general highly
 oscillatory domain. Also, we analyse an optimal control problem on a circular oscillating domain with the assistance of this operator. Finally, we consider a non-linear optimal control problem on the above mentioned general
 oscillatory domain and study the asymptotic behaviour.
-
