--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -21,20 +21,37 @@ prereqs:
   - A course in linear algebra, and a course in real analysis.
 ---
 
-This course explores matrix positivity and operations that preserve it. These involve fundamental
-questions that have been extensively studied in the mathematics literature over the past century,
-and are still being studied owing to modern applications to high-dimensional covariance estimation.
-The course will bring together techniques from many different areas: analysis, linear algebra,
-combinatorics, and symmetric functions.
+This course explores matrix positivity and operations that preserve it. These involve fundamental questions that have been extensively studied in the mathematics literature over the past century, and are still being studied owing to modern applications to high-dimensional covariance estimation. The course will bring together techniques from different areas: analysis, linear algebra, combinatorics, and symmetric functions.
 
 __List of topics__ (time permitting):
- __1.__ _The cone of positive semidefinite matrices. Totally positive/non-negative matrices._
- Examples of PSD and TP/TN matrices (Gram, Hankel, Toeplitz, Vandermonde, $\\mathbb{P}_G$). Matrix
-identities (Cauchy-Binet, Andreief). Generalized Rayleigh quotients and spectral radius.
 
-__2.__ _Positivity preservers._ Schur product theorem. Polya-Szego observation. Schoenberg’s
-theorem. Positive definite functions to correlation matrices. Rudin’s (stronger) theorem.
-Herz, Christensen-Ressel. 
+__1.__ _The cone of positive semidefinite matrices. Totally positive/non-negative matrices._
+Examples of PSD and TP/TN matrices (Gram, Hankel, Toeplitz, Vandermonde, $\\mathbb{P}\_G$). Matrix identities (Cauchy-Binet, Andreief). Generalized Rayleigh quotients and spectral radius.
 
-__3__ _Fixed-dimension problem._ Introduction and modern motivations. H.L. Vasudeva's theorem
-and simplifications. Roger Horn’s theorem and simplifications.
+__2.__ _Positivity preservers._
+Schur product theorem. Polya-Szego observation. Schoenberg's theorem. Positive definite functions to correlation matrices. Rudin's (stronger) theorem. Herz, Christensen-Ressel. 
+
+__3.__ _Fixed-dimension problem._
+Introduction and modern motivations. H.L. Vasudeva's theorem and simplifications. Roger Horn's theorem and simplifications.
+
+__4.__ _Proof of Schoenberg's theorem._
+Characterization of (Hankel total) positivity preservers in the dimension-free setting.
+
+__5.__ _Analytic/polynomial preservers – I._
+Which coefficients can be negative? Bounded and unbounded domains: Horn-type necessary conditions.
+
+__6.__ _Schur polynomials._
+Two definitions and properties. Specialization over fields and for real powers. First-order approximation.
+
+__7.__ _Analytic/polynomial preservers – II._
+Sign patterns: The Horn-type necessary conditions are best possible. Sharp quantitative bound. Extension principle I: dimension increase.
+
+__8.__ _Entrywise maps preserving total positivity._
+Extension principle II: Hankel TN matrices. Variants for all TP matrices and for symmetric TP matrices. Matrix completion problems.
+
+__9.__ _Entrywise powers preserving positivity._
+Application of Extension principle I. Low-rank counterexamples. Tanvi Jain's result.
+
+__10.__ _Characterizations for functions preserving $\\mathbb{P}\_G$._
+Extension principle III: pendant edges. The case of trees. Chordal graphs and their properties. Functions and powers preserving $\\mathbb{P}\_G$ for G chordal. Non-chordal graphs.
+
