--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -53,5 +53,5 @@ __9.__ _Entrywise powers preserving positivity._
 Application of Extension principle I. Low-rank counterexamples. Tanvi Jain's result.
 
 __10.__ _Characterizations for functions preserving $\\mathbb{P}\_G$._
-Extension principle III: pendant edges. The case of trees. Chordal graphs and their properties. Functions and powers preserving $\\mathbb{P}\_G$ for G chordal. Non-chordal graphs.
+Extension principle III: pendant edges. The case of trees. Chordal graphs and their properties. Functions and powers preserving $\\mathbb{P}\_G$ for $G$ chordal. Non-chordal graphs.
 
