--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -3,20 +3,20 @@ code: MA 341
 title: Matrix Analysis and Positivity  
 books:
   - author: Rajendra Bhatia
-    title: Matrix Analysis,
-    publ: vol. 169 of Graduate Texts in Mathematics, Springer, 1997
+    title: Matrix Analysis
+    publ:  vol. 169 of Graduate Texts in Mathematics, Springer, 1997
   - author: Rajendra Bhatia
-    title: Positive definite matrices,
-    publ: Princeton Series in Applied Mathematics, 2007
+    title: Positive definite matrices
+    publ:  Princeton Series in Applied Mathematics, 2007
   - author: Roger A. Horn and Charles R. Johnson
     title: Matrix analysis,
-    publ: Cambridge University Press, 1990
+    publ:  Cambridge University Press, 1990
   - author: Roger A. Horn and Charles R. Johnson
-    title: Topics in matrix analysis,
-    publ: Cambridge University Press, 1991
+    title: Topics in matrix analysis
+    publ:  Cambridge University Press, 1991
   - author: Samuel Karlin
-    title: Total positivity,
-    publ: Stanford University Press, 1968
+    title: Total positivity
+    publ:  Stanford University Press, 1968
 prereqs:
   - A course in linear algebra, and a course in real analysis.
 ---
