--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -9,7 +9,7 @@ books:
     title: Positive definite matrices
     publ:  Princeton Series in Applied Mathematics, 2007
   - author: Roger A. Horn and Charles R. Johnson
-    title: Matrix analysis,
+    title: Matrix analysis
     publ:  Cambridge University Press, 1990
   - author: Roger A. Horn and Charles R. Johnson
     title: Topics in matrix analysis
