--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -26,7 +26,7 @@ This course explores matrix positivity and operations that preserve it. These in
 __List of topics__ (time permitting):
 
 __1.__ _The cone of positive semidefinite matrices. Totally positive/non-negative matrices._
-Examples of PSD and TP/TN matrices (Gram, Hankel, Toeplitz, Vandermonde, $\\mathbb{P}\_G$). Matrix identities (Cauchy-Binet, Andreief). Generalized Rayleigh quotients and spectral radius.
+Examples of PSD and TP/TN matrices (Gram, Hankel, Toeplitz, Vandermonde, $\\mathbb{P}\_G$). Matrix identities (Cauchy-Binet, Andreief). Generalized Rayleigh quotients and spectral radius. Schur complements.
 
 __2.__ _Positivity preservers._
 Schur product theorem. Polya-Szego observation. Schoenberg's theorem. Positive definite functions to correlation matrices. Rudin's (stronger) theorem. Herz, Christensen-Ressel. 
