--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -18,7 +18,7 @@ books:
     title: Total positivity
     publ:  Stanford University Press, 1968
 prereqs:
-  - A course in linear algebra, and a course in real analysis.
+  - A course in linear algebra, and a course in calculus/real analysis.
 ---
 
 This course explores matrix positivity and operations that preserve it. These involve fundamental questions that have been extensively studied in the mathematics literature over the past century, and are still being studied owing to modern applications to high-dimensional covariance estimation. The course will bring together techniques from different areas: analysis, linear algebra, combinatorics, and symmetric functions.
