--- a/_all-courses/ma373.md
+++ b/_all-courses/ma373.md
@@ -14,7 +14,7 @@ books:
   - author: V. Barbu
     title: Mathematical methods in optimization of differential systems
     publ: Mathematics and its applications, Vol. 310 Kluwer academic Publishers, 1994
-prereq:
+prereqs:
   - Functional analysis
   - PDE and advanced PDE
 ---
