--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,47 @@
+@book {MR3726880,
+    AUTHOR = {Gupta, S. C.},
+     TITLE = {The classical {S}tefan problem},
+      NOTE = {Basic concepts, modelling and analysis with quasi-analytical
+              solutions and methods,
+              New edition of [ MR2032973]},
+ PUBLISHER = {Elsevier, Amsterdam},
+      YEAR = {2018},
+     PAGES = {xxiii+726},
+      ISBN = {978-0-444-63581-5},
+   MRCLASS = {80A22 (35C15 35R30 35R35)},
+  MRNUMBER = {3726880},
+}
+
+@article {MR3724147,
+    AUTHOR = {Bhattacharyya, Tirthankar and Sau, Haripada},
+     TITLE = {Holomorphic functions on the symmetrized bidisk---realization,
+              interpolation and extension},
+   JOURNAL = {J. Funct. Anal.},
+  FJOURNAL = {Journal of Functional Analysis},
+    VOLUME = {274},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {504--524},
+      ISSN = {0022-1236},
+   MRCLASS = {32A10 (32A70 46E22 47A13 47A20 47A25)},
+  MRNUMBER = {3724147},
+       URL = {https://doi.org/10.1016/j.jfa.2017.09.013},
+}
+
+@article {MR3716249,
+    AUTHOR = {Paul, Kallol and Sain, Debmalya and Mal, Arpita},
+     TITLE = {Approximate {B}irkhoff-{J}ames orthogonality in the space of
+              bounded linear operators},
+   JOURNAL = {Linear Algebra Appl.},
+  FJOURNAL = {Linear Algebra and its Applications},
+    VOLUME = {537},
+      YEAR = {2018},
+     PAGES = {348--357},
+      ISSN = {0024-3795},
+   MRCLASS = {46B28 (47L05 47L25)},
+  MRNUMBER = {3716249},
+       URL = {https://doi.org/10.1016/j.laa.2017.10.008},
+}
 
 @article {MR3702695,
     AUTHOR = {Sain, Debmalya},
@@ -14,6 +58,122 @@
        URL = {https://doi.org/10.1016/j.jmaa.2017.07.070},
 }
 
+@article {MR3736796,
+    AUTHOR = {Gaussier, Herv\'e and Seshadri, Harish},
+     TITLE = {Metric geometry of the {K}obayashi metric},
+   JOURNAL = {Eur. J. Math.},
+  FJOURNAL = {European Journal of Mathematics},
+    VOLUME = {3},
+      YEAR = {2017},
+    NUMBER = {4},
+     PAGES = {1030--1044},
+      ISSN = {2199-675X},
+   MRCLASS = {32F45 (32A30 53C23)},
+  MRNUMBER = {3736796},
+       URL = {https://doi.org/10.1007/s40879-017-0177-x},
+}
+
+@article {MR3730038,
+    AUTHOR = {Ghosh, Puja and Sain, Debmalya and Paul, Kallol},
+     TITLE = {On symmetry of {B}irkhoff-{J}ames orthogonality of linear
+              operators},
+   JOURNAL = {Adv. Oper. Theory},
+  FJOURNAL = {Advances in Operator Theory},
+    VOLUME = {2},
+      YEAR = {2017},
+    NUMBER = {4},
+     PAGES = {428--434},
+      ISSN = {2538-225X},
+   MRCLASS = {46B20 (47A30)},
+  MRNUMBER = {3730038},
+}
+
+@article {MR3729624,
+    AUTHOR = {Khare, Apoorva and Rajaratnam, Bala},
+     TITLE = {The {H}offmann-{J}\o rgensen inequality in metric semigroups},
+   JOURNAL = {Ann. Probab.},
+  FJOURNAL = {The Annals of Probability},
+    VOLUME = {45},
+      YEAR = {2017},
+    NUMBER = {6A},
+     PAGES = {4101--4111},
+      ISSN = {0091-1798},
+   MRCLASS = {60E15 (60B15)},
+  MRNUMBER = {3729624},
+       URL = {https://doi.org/10.1214/16-AOP1160},
+}
+
+@incollection {MR3728124,
+    AUTHOR = {Bhosle, Usha N.},
+     TITLE = {On a conjecture of {B}utler},
+ BOOKTITLE = {Analytic and algebraic geometry},
+     PAGES = {29--48},
+ PUBLISHER = {Hindustan Book Agency, New Delhi},
+      YEAR = {2017},
+   MRCLASS = {14H60},
+  MRNUMBER = {3728124},
+}
+
+@article {MR3720509,
+    AUTHOR = {Balodi, Mamta and Huang, Hua-Lin and Kumar, Shiv Datt},
+     TITLE = {On the classification of finite quasi-quantum groups},
+   JOURNAL = {Rev. Math. Phys.},
+  FJOURNAL = {Reviews in Mathematical Physics. A Journal for Both Review and
+              Original Research Papers in the Field of Mathematical Physics},
+    VOLUME = {29},
+      YEAR = {2017},
+    NUMBER = {10},
+     PAGES = {1730003, 20},
+      ISSN = {0129-055X},
+   MRCLASS = {16T15 (16G20 57T05)},
+  MRNUMBER = {3720509},
+       URL = {https://doi.org/10.1142/S0129055X17300035},
+}
+
+@article {MR3719476,
+    AUTHOR = {Adhikari, Kartick and Reddy, Nanda Kishore},
+     TITLE = {Hole probabilities for finite and infinite {G}inibre
+              ensembles},
+   JOURNAL = {Int. Math. Res. Not. IMRN},
+  FJOURNAL = {International Mathematics Research Notices. IMRN},
+      YEAR = {2017},
+    NUMBER = {21},
+     PAGES = {6694--6730},
+      ISSN = {1073-7928},
+   MRCLASS = {60G55 (60B20)},
+  MRNUMBER = {3719476},
+       URL = {https://doi.org/10.1093/imrn/rnw207},
+}
+
+@incollection {MR3715446,
+    AUTHOR = {Gupta, Subhojoy and Wolf, Michael},
+     TITLE = {Meromorphic quadratic differentials with complex residues and
+              spiralling foliations},
+ BOOKTITLE = {In the tradition of {A}hlfors-{B}ers. {VII}},
+    SERIES = {Contemp. Math.},
+    VOLUME = {696},
+     PAGES = {153--181},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {2017},
+   MRCLASS = {30F30 (30F60)},
+  MRNUMBER = {3715446},
+       URL = {https://doi.org/10.1090/conm/696/14021},
+}
+
+@article {MR3711045,
+    AUTHOR = {Datta, Basudeb and Murai, Satoshi},
+     TITLE = {On stacked triangulated manifolds},
+   JOURNAL = {Electron. J. Combin.},
+  FJOURNAL = {Electronic Journal of Combinatorics},
+    VOLUME = {24},
+      YEAR = {2017},
+    NUMBER = {4},
+     PAGES = {Paper 4.12, 14},
+      ISSN = {1077-8926},
+   MRCLASS = {57Q15 (05C40 57R20)},
+  MRNUMBER = {3711045},
+}
+
 @article {MR3709307,
     AUTHOR = {Senthil Raani, K. S.},
      TITLE = {{$L^p$}-{F}ourier asymptotics, {H}ardy-type inequality and
@@ -27,6 +187,7 @@
       ISSN = {0026-9255},
    MRCLASS = {42B10 (28A78 40E05)},
   MRNUMBER = {3709307},
+MRREVIEWER = {Hyun Soo Chung},
        URL = {https://doi.org/10.1007/s00605-017-1081-7},
 }
 
@@ -45,7 +206,6 @@
   MRNUMBER = {3701044},
        URL = {https://doi.org/10.14232/actasm-015-088-4},
 }
-
 @article {MR3695870,
     AUTHOR = {Dhillon, Gurbir and Khare, Apoorva},
      TITLE = {Faces of highest weight modules and the universal {W}eyl
