--- a/_all-courses/ma350.md
+++ b/_all-courses/ma350.md
@@ -6,15 +6,15 @@ prereqs:
 - Complex analysis
 - Preferably some familiarity with MA 352 (=Introduction to Analytic number theory)
 books: 
-  - author:  H. Davenport.
+  - author:  H. Davenport
     title: Multiplicative Number Theory
     publ: Springer GTM 74
-  - author:  M. Ram Murty.
+  - author:  M. Ram Murty
     title: Problems in Analytic Number Theory
-    publ: Springer GTM 206.
+    publ: Springer GTM 206
   - author:  H. Iwaniec and E. Kowalski.
     title: Analytic Number Theory
-    publ: AMS Colloquium Publ. 53.
+    publ: AMS Colloquium Publ. 53
 ---
 
 Arithmetical functions, Primes in Arithmetic Progressions, Prime number
