fixed peculiar biblio entry

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -87,8 +87,7 @@
     AUTHOR = {Gupta, S. C.},
      TITLE = {The classical {S}tefan problem},
       NOTE = {Basic concepts, modelling and analysis with quasi-analytical
-              solutions and methods,
-              New edition of [ MR2032973]},
+              solutions and methods},
  PUBLISHER = {Elsevier, Amsterdam},
       YEAR = {2018},
      PAGES = {xxiii+726},
