--- a/_all-courses/ma341.md
+++ b/_all-courses/ma341.md
@@ -21,7 +21,7 @@ prereqs:
   - A course in linear algebra, and a course in calculus/real analysis.
 ---
 
-This course explores matrix positivity and operations that preserve it. These involve fundamental questions that have been extensively studied in the mathematics literature over the past century, and are still being studied owing to modern applications to high-dimensional covariance estimation. The course will bring together techniques from different areas: analysis, linear algebra, combinatorics, and symmetric functions.
+This course explores matrix positivity and operations that preserve it. These involve fundamental questions that have been extensively studied over the past century, and are still being studied in the mathematics literature, including with additional motivation from modern applications to high-dimensional covariance estimation. The course will bring together techniques from different areas: analysis, linear algebra, combinatorics, and symmetric functions.
 
 __List of topics__ (time permitting):
 
