--- a/_posts/2018-07-23-IST-PDE.md
+++ b/_posts/2018-07-23-IST-PDE.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: NCM IST - PDE : Theory and Computation (2018). 
+title: NCM IST - PDE - Theory and Computation (2018).
 date: 2018-07-23
 ---
 
