elective course details

--- a/_all-courses/ma266.md
+++ b/_all-courses/ma266.md
@@ -1,6 +1,6 @@
 ---
-code: MA 363
-title: Stochastic Finance I
+code: MA 266
+title: Mathematical Finance I
 books:
   - author:  Luenberger, D.V.
     title: Investment Science
