--- a/_all-courses/ma310.md
+++ b/_all-courses/ma310.md
@@ -1,6 +1,6 @@
 ---
 code: MA 310
-title: Algebraic Geometry 1
+title: Algebraic Geometry I
 books:
   - author: Robin Hartshorne
     title: Algebraic geometry
