--- a/_all-courses/ma311.md
+++ b/_all-courses/ma311.md
@@ -1,6 +1,6 @@
 ---
 code: MA 311
-title: Algebraic Geometry 2
+title: Algebraic Geometry II
 books:
   - author: Robin Hartshorne
     title: Algebraic geometry
