--- a/_all-courses/ma335.md
+++ b/_all-courses/ma335.md
@@ -1,4 +1,18 @@
 ---
 code: MA 335
 title: Introduction to Hyperbolic Manifolds
+prereqs:
+  - Topology (MA 231)
+  - Introduction to Algebraic Topology (MA 232) or equivalent.
+books:
+  - title: Foundations of Hyperbolic Manifolds
+    author: Ratcliffe
+  - title:  Lectures on Hyperbolic Geometry
+    author: Benedetti-Petronio
+  - title: Introduction to Geometric Topology
+    author: Martelli
 ---
+
+This is an introduction to hyperbolic surfaces and 3-manifolds, which played a key role in the development of geometric topology in the preceding few decades.
+Topics that shall be discussed will be from the following list:
+Basic notions of Riemannian geometry, Models of hyperbolic space, Fuchsian groups, Thick-thin decomposition, Teichmüller space, The Nielsen Realisation problem, Kleinian groups, The boundary at infinity, Mostow rigidity theorem, 3-manifold topology and the JSJ-decomposition, Statement of Thurston's Geometrization Conjecture (proved by Perelman)
