--- a/_all-courses/ma366.md
+++ b/_all-courses/ma366.md
@@ -1,6 +1,6 @@
 ---
 code: MA 366
-title: Stochastic Finance II
+title: Mathematical Finance II
 books:
   - author:  Amman, M.
     title: Credit Risk Valuation, Second Edition
