--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,205 @@
+@article {MR3798786,
+    AUTHOR = {Das, Soumya and Kohnen, Winfried},
+     TITLE = {On sign changes of eigenvalues of {S}iegel cusp forms of genus
+              2 in prime powers},
+   JOURNAL = {Acta Arith.},
+  FJOURNAL = {Acta Arithmetica},
+    VOLUME = {183},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {167--172},
+      ISSN = {0065-1036},
+   MRCLASS = {11F46},
+  MRNUMBER = {3798786},
+       DOI = {10.4064/aa170419-4-11},
+       URL = {https://doi.org/10.4064/aa170419-4-11},
+}
+
+@article {MR3798023,
+    AUTHOR = {Aiyappan, S. and Nandakumaran, A. K. and Prakash, Ravi},
+     TITLE = {Generalization of unfolding operator for highly oscillating
+              smooth boundary domains and homogenization},
+   JOURNAL = {Calc. Var. Partial Differential Equations},
+  FJOURNAL = {Calculus of Variations and Partial Differential Equations},
+    VOLUME = {57},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {Art. 86, 30},
+      ISSN = {0944-2669},
+   MRCLASS = {35B27},
+  MRNUMBER = {3798023},
+       DOI = {10.1007/s00526-018-1354-6},
+       URL = {https://doi.org/10.1007/s00526-018-1354-6},
+}
+
+@article {MR3795110,
+    AUTHOR = {Paul, Kallol and Sain, Debmalya and Mal, Arpita and Mandal,
+              Kalidas},
+     TITLE = {Orthogonality of bounded linear operators on complex {B}anach
+              spaces},
+   JOURNAL = {Adv. Oper. Theory},
+  FJOURNAL = {Advances in Operator Theory},
+    VOLUME = {3},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {699--709},
+      ISSN = {2538-225X},
+   MRCLASS = {46B20 (47L05)},
+  MRNUMBER = {3795110},
+       DOI = {10.15352/aot.1712-1268},
+       URL = {https://doi.org/10.15352/aot.1712-1268},
+}
+
+@article {MR3790010,
+    AUTHOR = {Ayyer, Arvind and Bouttier, J\'er\'emie and Corteel, Sylvie and
+              Linusson, Svante and Nunzi, Fran\c{c}ois},
+     TITLE = {Bumping sequences and multispecies juggling},
+   JOURNAL = {Adv. in Appl. Math.},
+  FJOURNAL = {Advances in Applied Mathematics},
+    VOLUME = {98},
+      YEAR = {2018},
+     PAGES = {100--126},
+      ISSN = {0196-8858},
+   MRCLASS = {60C05 (05A05 60J10 82C23)},
+  MRNUMBER = {3790010},
+       DOI = {10.1016/j.aam.2018.03.001},
+       URL = {https://doi.org/10.1016/j.aam.2018.03.001},
+}
+
+@article {MR3786525,
+    AUTHOR = {Bhosle, Usha N.},
+     TITLE = {Hitchin pairs on reducible curves},
+   JOURNAL = {Internat. J. Math.},
+  FJOURNAL = {International Journal of Mathematics},
+    VOLUME = {29},
+      YEAR = {2018},
+    NUMBER = {3},
+     PAGES = {1850015, 49},
+      ISSN = {0129-167X},
+   MRCLASS = {14H60 (14D20)},
+  MRNUMBER = {3786525},
+       DOI = {10.1142/S0129167X18500155},
+       URL = {https://doi.org/10.1142/S0129167X18500155},
+}
+
+@article {MR3781317,
+    AUTHOR = {Thangavelu, Sundaram and Naidu Dogga, Venku},
+     TITLE = {{$L^p$}-{$L^2$} estimates for solutions of the wave equation
+              associated to the {G}rushin operator},
+   JOURNAL = {Adv. Pure Appl. Math.},
+  FJOURNAL = {Advances in Pure and Applied Mathematics},
+    VOLUME = {9},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {85--92},
+      ISSN = {1867-1152},
+   MRCLASS = {42C10 (46E30 47D09)},
+  MRNUMBER = {3781317},
+       DOI = {10.1515/apam-2017-0042},
+       URL = {https://doi.org/10.1515/apam-2017-0042},
+}
+
+@article {MR3780407,
+    AUTHOR = {Balodi, Mamta and Palcoux, Sebastien},
+     TITLE = {On {B}oolean intervals of finite groups},
+   JOURNAL = {J. Combin. Theory Ser. A},
+  FJOURNAL = {Journal of Combinatorial Theory. Series A},
+    VOLUME = {157},
+      YEAR = {2018},
+     PAGES = {49--69},
+      ISSN = {0097-3165},
+   MRCLASS = {20D30 (05E45 06A11 06C15 20C15)},
+  MRNUMBER = {3780407},
+       DOI = {10.1016/j.jcta.2018.02.004},
+       URL = {https://doi.org/10.1016/j.jcta.2018.02.004},
+}
+
+@article {MR3778393,
+    AUTHOR = {Narayanan, E. K. and Singla, Pooja},
+     TITLE = {On monomial representations of finitely generated nilpotent
+              groups},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {46},
+      YEAR = {2018},
+    NUMBER = {6},
+     PAGES = {2319--2331},
+      ISSN = {0092-7872},
+   MRCLASS = {20C15 (20F18 22D30)},
+  MRNUMBER = {3778393},
+       DOI = {10.1080/00927872.2017.1378894},
+       URL = {https://doi.org/10.1080/00927872.2017.1378894},
+}
+
+@article {MR3778389,
+    AUTHOR = {Bera, Sayani and Verma, Kaushal},
+     TITLE = {Some aspects of shift-like automorphisms of {$\Bbb C^k$}},
+   JOURNAL = {Proc. Indian Acad. Sci. Math. Sci.},
+  FJOURNAL = {Indian Academy of Sciences. Proceedings. Mathematical
+              Sciences},
+    VOLUME = {128},
+      YEAR = {2018},
+    NUMBER = {1},
+     PAGES = {Art. 10, 48},
+      ISSN = {0253-4142},
+   MRCLASS = {32H50 (32H02)},
+  MRNUMBER = {3778389},
+       DOI = {10.1007/s12044-018-0388-1},
+       URL = {https://doi.org/10.1007/s12044-018-0388-1},
+}
+
+@article {MR3777102,
+    AUTHOR = {Gaddam, Sharat and Gudi, Thirupathi},
+     TITLE = {Inhomogeneous {D}irichlet boundary condition in the {\it a
+              posteriori} error control of the obstacle problem},
+   JOURNAL = {Comput. Math. Appl.},
+  FJOURNAL = {Computers \& Mathematics with Applications. An International
+              Journal},
+    VOLUME = {75},
+      YEAR = {2018},
+    NUMBER = {7},
+     PAGES = {2311--2327},
+      ISSN = {0898-1221},
+   MRCLASS = {65N30 (65K15 65N15)},
+  MRNUMBER = {3777102},
+       DOI = {10.1016/j.camwa.2017.12.010},
+       URL = {https://doi.org/10.1016/j.camwa.2017.12.010},
+}
+
+@article {MR3776043,
+    AUTHOR = {Gaddam, Sharat and Gudi, Thirupathi},
+     TITLE = {Bubbles enriched quadratic finite element method for the
+              3{D}-elliptic obstacle problem},
+   JOURNAL = {Comput. Methods Appl. Math.},
+  FJOURNAL = {Computational Methods in Applied Mathematics},
+    VOLUME = {18},
+      YEAR = {2018},
+    NUMBER = {2},
+     PAGES = {223--236},
+      ISSN = {1609-4840},
+   MRCLASS = {65N30 (65K15 65N12 65N15)},
+  MRNUMBER = {3776043},
+       DOI = {10.1515/cmam-2017-0018},
+       URL = {https://doi.org/10.1515/cmam-2017-0018},
+}
+
+@article {MR3774428,
+    AUTHOR = {Pingali, Vamsi Pritham},
+     TITLE = {Representability of {C}hern-{W}eil forms},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {288},
+      YEAR = {2018},
+    NUMBER = {1-2},
+     PAGES = {629--641},
+      ISSN = {0025-5874},
+   MRCLASS = {32L05 (14J60)},
+  MRNUMBER = {3774428},
+       DOI = {10.1007/s00209-017-1903-2},
+       URL = {https://doi.org/10.1007/s00209-017-1903-2},
+}
+
+
 @article {MR3758960,
     AUTHOR = {Iyer, Srikanth K.},
      TITLE = {The random connection model: connectivity, edge lengths, and
