--- a/_all-courses/ma370.md
+++ b/_all-courses/ma370.md
@@ -2,9 +2,7 @@
 
 
 code: MA 370  
-title: Hermetian Analysis
-prereq-courses: 
-ug-prereq-courses: 
+title: Hermitian Analysis
+prereq-courses:
+ug-prereq-courses:
 ---
-
-
