rep theory course

--- a/_all-courses/ma220.md
+++ b/_all-courses/ma220.md
@@ -1,11 +1,15 @@
 ---
-
-
-
 code: MA 220
 title: Representation theory of Finite groups
 prereq-courses: MA 212 and MA 219
-ug-prereq-courses: 
+ug-prereq-courses:
+books:
+  - author: Etingof Pavel, Golberg Oleg, Hensel Sebastian, Liu Tiankai, Schwendner Alex, Vaintrob Dmitry, Yudovina Elena,
+    title: Introduction to representation theory. With historical interludes by Slava Gerovitch
+    publ: Student Mathematical Library 59. American Mathematical Society. 2011
+  - title: Linear representations of finite groups
+    author: J. P. Serre
+    publ:  Graduate Texts in Mathematics. Vol. 42. Springer-Verlag. New York-Heidelberg. 1977
 ---
 
 
