Mathematical finance name corrected

--- a/_all-courses/ma266.md
+++ b/_all-courses/ma266.md
@@ -2,7 +2,7 @@
 
 
 code: MA 266
-title: Mathematical Finance I
+title: Stochastic Finance I
 books:
   - author:  Luenberger, D.V.
     title: Investment Science
@@ -13,8 +13,8 @@ books:
   - author:  Shreve, S.E.
     title: Stochastic Calculus for Finance I:  The Binomial Asset pricing Model
     publ: Springer, 2005
-prereq-courses: 
-ug-prereq-courses: 
+prereq-courses:
+ug-prereq-courses:
 ---
 
 
