--- a/_all-courses/ma366.md
+++ b/_all-courses/ma366.md
@@ -2,7 +2,7 @@
 
 
 code: MA 366
-title: Mathematical Finance II
+title: Stochastic Finance II
 books:
   - author:  Amman, M.
     title: Credit Risk Valuation, Second Edition
@@ -16,8 +16,8 @@ books:
   - author:  Shreve, S.E.
     title: "Stochastic Calculus for Finance II : The continous Time Models"
     publ: Springer, 2004
-prereq-courses: 
-ug-prereq-courses: 
+prereq-courses:
+ug-prereq-courses:
 ---
 
 
